# 2025-p1-Arbatel66

./: README.md  endpoints.http  pyproject.toml
todo/: __init__.py
todo/views/: routes.py
