[project]
name = "practical01"
version = "0.1.0"
description = ""
authors = [
    {name = "Zihao",email = "arbatel66@gmail.com"}
]
readme = "README.md"
#[tool.poetry.dependencies]
#python = "^3.8"
#[build-system]
#requires = ["poetry-core"]
#build-backend = "poetry.core.masonry.api"
requires-python = ">=3.10"
dependencies = [
    "flask (>=3.1.0,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
